--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1325,3 +1325,222 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
+entity.permissiongroup=Permission Group
+entity.permissiongroup_plural=Permission Groups
+entity.PermissionGroup.permissionGroupName=Permission Group Name
+admin.account.accounttabs.permissions=Permission Groups
+permission.account=Account
+permission.basecontroller=Base Controller
+permission.comment=Comment
+permission.help=Help
+permission.integration=Integration
+permission.main=Main
+permission.order=Order
+permission.pricing=Pricing
+permission.print=Print
+permission.product=Product
+permission.report=Report
+permission.schedule=Schedule
+permission.setting=Setting
+permission.vendor=Vendor
+permission.warehouse=Warehouse
+permission.superuser=Super User
+entity.merchandiseproducttype=Merchandise Product Type
+permission.help.about=About
+permission.main.default=Default
+permission.warehouse.createstockadjustment=Stock Adjustment - Create
+permission.warehouse.createstockreceiver=Stock Receiver - Create
+permission.warehouse.deletestockadjustment=Stock Adjustment - Delete
+permission.warehouse.deletestockreceiver=Stock Receiver - Delete
+permission.warehouse.detailstockadjustment=Stock Adjustment - Detail
+permission.warehouse.detailstockreceiver=Stock Receiver - Detail
+permission.warehouse.editstockadjustment=Stock Adjustment - Edit
+permission.warehouse.editstockreceiver=Stock Receiver - Edit
+permission.warehouse.liststockadjustment=Stock Adjustment - List
+permission.warehouse.liststockreceiver=Stock Receiver - List
+permission.warehouse.savestockreceiver=Stock Receiver - Save
+permission.setting.createaddresszone=Address Zone - Create
+permission.setting.createattributeset=Attribute Set - Create
+permission.setting.createcategory=Category - Create
+permission.setting.createcontent=Content - Create
+permission.setting.createcountry=Country - Create
+permission.setting.createfulfillmentmethod=Fullfillment Method - Create
+permission.setting.createlocation=Location - Create
+permission.setting.createmeasurementunit=Measurement Unit - Create
+permission.setting.createorderorigin=Order Origin - Create
+permission.setting.createpaymentmethod=Payment Method - Create
+permission.setting.createroundingrule=Rounding Rule - Create
+permission.setting.createschedule=Schedule - Create
+permission.setting.createtask=Task - Create
+permission.setting.createtaxcategory=Tax Category - Create
+permission.setting.createterm=Term - Create
+permission.setting.createType=Type - Create
+permission.setting.deleteaddresszone=Address Zone - Delete
+permission.setting.deleteattributeset=Attribute Set - Delete
+permission.setting.deletecategory=Category - Delete
+permission.setting.deletecontent=Content - Delete
+permission.setting.deletecountryCountry - Delete
+permission.setting.deletefulfillmentmethod=Fulfillment Method - Delete
+permission.setting.deletelocation_missing=Location - Delete
+permission.setting.deletemeasurementunit=Measurement Unit - Delete
+permission.setting.deleteorderorigin=Order Origin - Delete
+permission.setting.deletepaymentmethod=Payment Method - Delete
+permission.setting.deleteroundingrule=Rounding Rule - Delete
+permission.setting.deleteschedule=Schedule - Delete
+permission.setting.deletetask=Task - Delete
+permission.setting.deletetaxcategory=Tax Category - Delete
+permission.setting.deleteterm=Term - Delete
+permission.setting.deleteType=Type - Delete
+permission.setting.detailaddresszone=Address Zone - Detail
+permission.setting.detailattributeset=Attribute Set - Detail
+permission.setting.detailcategory=Category - Detail
+permission.setting.detailcontent=Content - Detail
+permission.setting.detailcountry=Country - Detail
+permission.setting.detailfulfillmentmethod=Fulfillment Method - Detail
+permission.setting.detaillocation=Location - Detail
+permission.setting.detailmeasurementunit=Measurement Unit - Detail
+permission.setting.detailorderorigin=Order Origin - Detail
+permission.setting.detailpaymentmethod=Payment Method - Detail
+permission.setting.detailroundingrule=Rounding Rule - Detail
+permission.setting.detailschedule=Schedule - Detail
+permission.setting.detailsetting=Setting - Detail
+permission.setting.detailtask=Task - Detail
+permission.setting.detailtaxcategory=Tax Category - Detail
+permission.setting.detailterm=Term - Detail
+permission.setting.detailType=Type - Detail
+permission.setting.editaddresszone=Address Zone - Edit
+permission.setting.editattributeset=Attribute Set - Edit
+permission.setting.editcategory=Category - Edit
+permission.setting.editcontent=Content - Edit
+permission.setting.editcountry=Country - Edit
+permission.setting.editfulfillmentmethod=Fulfillment Method - Edit
+permission.setting.editlocation=Location - Edit
+permission.setting.editmeasurementunit=Measurement Unit - Edit
+permission.setting.editorderorigin=Order Origin - Edit
+permission.setting.editpaymentmethod=Payment Method - Edit
+permission.setting.editroundingrule=Rounding Rule - Edit
+permission.setting.editschedule=Schedule - Edit
+permission.setting.editsetting=Setting - Edit
+permission.setting.edittask=Task - Edit
+permission.setting.edittaxcategory=Tax Category - Edit
+permission.setting.editterm=Term - Edit
+permission.setting.editType=Type - Edit
+permission.setting.listaddresszone=Address Zone - List
+permission.setting.listattributeset=Attribute Set - List
+permission.setting.listcategory=Category - List
+permission.setting.listcountry=Country - List
+permission.setting.listfulfillmentmethod=Fulfillment Method - list
+permission.setting.listLocation=Location - List
+permission.setting.listorderorigin=Order Origin - List
+permission.setting.listpaymentmethod=Payment Method - List
+permission.setting.listroundingrule=Rounding Rule - List
+permission.setting.listschedule=Schedule - List
+permission.setting.listsetting=Setting - List
+permission.setting.listtask=Task - List
+permission.setting.listtaskhistory=Task History - List
+permission.setting.listtaxcategory=Tax Category- List
+permission.setting.listterm=Term - List
+permission.setting.listType=Type - List
+permission.setting.listmeasurementunit=Measurement Unit - List
+permission.report.order=Orders
+permission.pricing.deletePricegroup=Price Group - Delete
+permission.pricing.deletePromotion=Promotion - Delete
+permission.pricing.detailPriceGroup=Price Group - Delete
+permission.pricing.detailPromotion=Promotion - Delete
+permission.pricing.editPriceGroup=Price Group - Edit
+permission.pricing.editPromotion=Promotion - Edit
+permission.pricing.listPricegroup=Price Group - List
+permission.pricing.listPromotion=Promotion - List
+permission.pricing.savePricegroup=Price Group - Save
+permission.pricing.savePromotion=Promotion - Save
+permission.order.deleteOrder=Order - Delete
+permission.order.deleteOrderFullfillment=Order Fulfillment - Delete
+permission.order.detailOrder=Order - Detail
+permission.order.detailOrderFullfillment=Order Fulfillment - Detail
+permission.order.editOrder=Order - Edit
+permission.order.editOrderFullfillment=Order Fulfillment - Edit
+permission.order.listOrder=Order - List
+permission.order.listOrderFullfillment=Order Fulfillment - List
+permission.order.saveOrder=Order - Save
+permission.order.saveOrderFullfillment=Order Fulfillment - Save
+permission.product.deleteBrand=Brand - Delete
+permission.product.deleteOptionGroup=Option Group - Delete
+permission.product.deleteProduct=Product - Delete
+permission.product.deleteProductReview=Product Review - Delete
+permission.product.deleteProductType=Product Type - Delete
+permission.product.deleteSubscriptionBenefit=Subscription Benefit - Delete
+permission.product.deleteSubscriptionTerm=Subscription Term - Delete
+permission.product.detailBrand=Brand - Delete
+permission.product.detailOptionGroup=Option Group - Detail
+permission.product.detailproduct=Product - Detail
+permission.product.detailProductReview=Product Review - Detail
+permission.product.detailProductType=Product Type - Detail
+permission.product.detailSubscriptionBenefit=Subscription Benefit - Detail
+permission.product.detailSubscriptionTerm=Subscription Term - Detail
+permission.product.editBrand=Brand - Edit
+permission.product.editOptionGroup=Option Group - Edit
+permission.product.editproduct=Product - Edit
+permission.product.editProductReview=Product review - Edit
+permission.product.editProductType=Product Type - Edit
+permission.product.editSubscriptionBenefit=Subscription Benefit - Edit
+permission.product.editSubscriptionTerm=Subscription Term - Edit
+permission.product.listBrand=Brand - List
+permission.product.listOptionGroup=Option Group - List
+permission.product.listproduct=Product - List
+permission.product.listProductReview=Product Review - List
+permission.product.listProductType=Product Type - List
+permission.product.listSubscriptionBenefit=Subscription Benefit - List
+permission.product.listSubscriptionTerm=Subscription Term - List
+permission.product.saveBrand=Brand - Save
+permission.product.saveOptionGroup=Option Group - Save
+permission.product.saveproduct=Product - Save
+permission.product.saveProductReview=Product Review - Save
+permission.product.saveProductType=Product Type - Save
+permission.product.saveSubscriptionBenefit=Subscription Benefit - Save
+permission.product.saveSubscriptionTerm=Subscription Term - Save
+permission.integration.createintegration=Integration - Create
+permission.integration.detailintegration=Integration - Detail
+permission.integration.editintegration=Integration - Edit
+permission.integration.listintegration=Integration - List
+permission.integration.saveintegration=Integration - Save
+permission.account.deleteAccount=Account - Delete
+permission.account.deletePermissionGroup=Permission Group - Delete
+permission.account.detailAccount=Account - Detail
+permission.account.detailPermissionGroup=Permission Group - Detail
+permission.account.editAccount=Account - Edit
+permission.account.editPermissionGroup=Permission Group - Edit
+permission.account.listAccount=Account - List
+permission.account.listPermissionGroup=Permission Group - List
+permission.account.saveAccount=Account - Save
+permission.account.savePermissionGroup=Permission Group - Save
+permission.vendor.createVendor=Vendor - Create
+permission.vendor.createVendorOrder=Vendor Order - Create
+permission.vendor.deleteVendor=Vendor - Delete
+permission.vendor.deleteVendorOrder=Vendor Order - Delete
+permission.vendor.detailVendor=Vendor - Detail
+permission.vendor.detailVendorOrder=Vendor Order - Detail
+permission.vendor.editVendor=Vendor - Edit
+permission.vendor.editVendorOrder=Vendor Order - Edit
+permission.vendor.listVendor=Vendor - List
+permission.vendor.listVendorOrder=Vendor Order - List
+permission.vendor.saveVendor=Vendor - Save
+permission.vendor.saveVendorOrder=Vendor Order - Save
+permission.setting.deletecountry=Country - Delete
+permission.setting.deletelocation=Location - Delete
+permission.setting.saveaddresszone=Address Zone - Save
+permission.setting.saveattributeset=Attribute Set - Save
+permission.setting.savecategory=Category - Save
+permission.setting.savecountry=Country - Save
+permission.setting.savefulfillmentmethod=Fulfillment Method - Save
+permission.setting.saveLocation=Location - Save
+permission.setting.savemeasurementunit=Measurement Unit - Save
+permission.setting.saveorderorigin=Order Origin - Save
+permission.setting.savepaymentmethod=Payment Method - Save
+permission.setting.saveroundingrule=Rounding Rule - Save
+permission.setting.saveschedule=Schedule - Save
+permission.setting.savesetting=Setting - Save
+permission.setting.savetask=Task - Save
+permission.setting.savetaskhistory=Task History - Save
+permission.setting.savetaxcategory=Tax Category - Save
+permission.setting.saveterm=Term - Save
+permission.setting.saveType=Type - Save
