few payment method changes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -685,6 +685,7 @@ entity.order.orderid=Order ID
 entity.order.orderorigin=Order Origin
 entity.order.paymentAmountReceivedTotal=Received Amount
 entity.order.total=Total
+entity.orderAccount=Account
 entity.orderDelivery=Order Delivery
 entity.orderDelivery.deliveryCloseDateTime=Delivery Close Date
 entity.orderDelivery.deliveryOpenDateTime=Delivery Open Date
@@ -751,6 +752,7 @@ entity.ordertiem=Order Item
 entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
 entity.paymentmethod=Payment Method
+entity.paymentmethod.allowSaveFlag=Allow Save
 entity.paymentmethod.paymentMethodID=Payment Method ID
 entity.paymentmethod.paymentmethodname=Payment Method Name
 entity.paymentmethod.paymentmethodtype=Payment Method Type
