--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -9,6 +9,8 @@ admin.account.accounttabs.pricegroups=Price Groups
 admin.account.accounttabs.productreviews=Product Reviews
 admin.account.accounttabs.paymentmethods=Payment Methods
 admin.account.accounttabs.subscriptions=Subscriptions
+admin.account.subscriptionUsage.renewal_success=Subscription was renewed successfully 
+admin.account.subscriptionUsage.renewal_error=There was an error when trying to renew the subscription 
 admin.account_nav=Accounts
 admin.define.create=Create ${itemEntityName}
 admin.define.create_nav=Add ${itemEntityName}
@@ -496,6 +498,7 @@ entity.addresszone.addressZoneName=Address Zone Name
 entity.addresszone.delete_validateIsDeletable=This Address Zone cannot be deleted because it is in use.
 entity.addresszone.norecords=No Address Zones Defined
 entity.addresszone_plural=Address Zones
+entity.addresszonelocation=Address Zone Location
 entity.addresszonelocation.addressZone=Address Zone
 entity.addresszonelocation.addressZoneLocationID=Address Zone Location ID
 entity.attribute=Attribute
@@ -1120,6 +1123,7 @@ entity.subscriptionterm=Subscription Term
 entity.subscriptionterm_plural=Subscription Terms
 entity.subscriptionUsage=Subscription Usage
 entity.subscriptionUsage_plural=Subscription Usages
+entity.subscriptionUsage.accountPaymentMethod=Account Payment Method
 entity.subscriptionUsage.allowProrateFlag=Allow Prorate
 entity.subscriptionUsage.autoRenewFlag=Auto Renew
 entity.subscriptionUsage.renewalPrice=Renewal Price
