--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1577,3 +1577,4 @@ permission.setting.savetaskhistory=Task History - Save
 permission.setting.savetaxcategory=Tax Category - Save
 permission.setting.saveterm=Term - Save
 permission.setting.saveType=Type - Save
+entity.ProductImage.imageFile=Image
