--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -9,8 +9,8 @@ admin.account.accounttabs.pricegroups=Price Groups
 admin.account.accounttabs.productreviews=Product Reviews
 admin.account.accounttabs.paymentmethods=Payment Methods
 admin.account.accounttabs.subscriptions=Subscriptions
-admin.account.subscriptionUsage.renewal_success=Subscription was renewed successfully 
-admin.account.subscriptionUsage.renewal_error=There was an error when trying to renew the subscription 
+admin.account.subscriptionUsage.process_success=Subscription was processed successfully 
+admin.account.subscriptionUsage.process_error=There was an error when trying to process the subscription 
 admin.account_nav=Accounts
 admin.define.create=Create ${itemEntityName}
 admin.define.create_nav=Add ${itemEntityName}
