--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1550,3 +1550,5 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
+entity.UpdatePrice=Price
+admin.product.updatePrice_nav=Update Price
