Updates to price update

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1552,3 +1552,7 @@ validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
 entity.UpdatePrice=Price
 admin.product.updatePrice_nav=Update Price
+admin.product.skutabs.priceGroups=Price Groups
+admin.product.SelectPricegroupRate_nav=Select Price Group
+admin.product.processproduct_nav=Update Price
+admin.product.processproduct.processOption.skuPrice=New Price
