sku price groups

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1556,3 +1556,5 @@ admin.product.skutabs.priceGroups=Price Groups
 admin.product.SelectPricegroupRate_nav=Select Price Group
 admin.product.processproduct_nav=Update Price
 admin.product.processproduct.processOption.skuPrice=New Price
+entity.Sku.priceGroupRates=Price Group Rates
+entity.PriceGroupRate.DisplayName=Name
