--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1558,3 +1558,4 @@ admin.product.processproduct_nav=Update Price
 admin.product.processproduct.processOption.skuPrice=New Price
 entity.Sku.priceGroupRates=Price Group Rates
 entity.PriceGroupRate.DisplayName=Name
+admin.product.skutabs.options=Options
