Promotion UI Work

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -80,6 +80,11 @@ admin.order.processorderpayment.processOption.amount=Process Amount
 admin.order.processorderpayment.processOption.transactionType=Process Action
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
+admin.pricing.createpromotionrewardcontentaccess=Content Access Product Discount
+admin.pricing.createpromotionrewardfulfillment=Fulfillment Discount
+admin.pricing.createpromotionrewardmerchandise=Merchandise Product Discount
+admin.pricing.createpromotionrewardorder=Order Discount
+admin.pricing.createpromotionrewardsubscription=Subscription Product Discount
 admin.pricing.deletepromotionperiod_disabled=This promotion period cannot be deleted because it has been used in a transtacion and/or it has expired.
 admin.pricing.deletepromotionqualifier_disabled=This promotion qualifier cannot be deleted because it has been used in a transtacion and/or its promotion period has expired.
 admin.pricing.deletepromotionreward_disabled=This promotion reward cannot be deleted because it has been used in a transtacion and/or its promotion period has expired.
@@ -99,6 +104,7 @@ admin.pricing.promotiontabs.promotiondescription=Description
 admin.pricing.promotiontabs.promotionperiods=Promotion Periods
 admin.pricing_nav=Pricing
 admin.product=Product Manager
+admin.product.SelectPricegroupRate_nav=Select Price Group
 admin.product.brandtabs.brandsettings=Brand Settings
 admin.product.brandtabs.products=Products
 admin.product.brandtabs.vendors=Vendors
@@ -114,6 +120,8 @@ admin.product.createproductimage_nav=Add Product Image
 admin.product.createsubscriptionproduct_nav=New Subscription Product
 admin.product.createsubscriptionproducttype_nav=New Subscription Product Type
 admin.product.optiongrouptabs.options=Options
+admin.product.processproduct.processOption.skuPrice=New Price
+admin.product.processproduct_nav=Update Price
 admin.product.producttabs.alternateimages=Alternate Images
 admin.product.producttabs.customattributes=Custom Attributes
 admin.product.producttabs.productcategories=Product Categories
@@ -132,8 +140,10 @@ admin.product.producttypetabs.producttypesettings=Product Type Settings
 admin.product.producttypetabs.skusettings=Sku Settings
 admin.product.skutabs.accesscontents=Access Content
 admin.product.skutabs.alternateskucodes=Alternate Sku Codes
+admin.product.skutabs.priceGroups=Price Groups
 admin.product.skutabs.skusettings=Sku Settings
 admin.product.skutabs.subscription=Subscription
+admin.product.updatePrice_nav=Update Price
 admin.product_nav=Products
 admin.producttype.settingdefinedin=Setting Defined In
 admin.report=Reporting Services
@@ -426,6 +436,7 @@ entity.TaskSchedule.nextRunDateTime=Next Run Time
 entity.TaskSchedule.schedule=Schedule
 entity.TaskSchedule.startDateTime=Start Date
 entity.TaskSchedule.successEmailList=Success Emails
+entity.UpdatePrice=Price
 entity.Vendor.brands=Brands Offered
 entity.Vendor.emailAddress=Email Address
 entity.VendorEmailAddress.emailAddress=Email Address
@@ -1550,9 +1561,3 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
-entity.UpdatePrice=Price
-admin.product.updatePrice_nav=Update Price
-admin.product.skutabs.priceGroups=Price Groups
-admin.product.SelectPricegroupRate_nav=Select Price Group
-admin.product.processproduct_nav=Update Price
-admin.product.processproduct.processOption.skuPrice=New Price
