--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -302,9 +302,11 @@ define.amountOff=Amount Off
 define.any=Any
 define.autoIncrement=Auto Increment
 define.backtolist=Back To List
+define.both=Both
 define.cancel=Cancel
 define.comments=Comments
 define.confirm=Confirm
+define.contentAccess=Content Access
 define.create=Create
 define.definedin=Defined In
 define.delete=Delete
@@ -316,15 +318,18 @@ define.exportlist=Export List
 define.false=False
 define.filter=Filter
 define.fixedAmount=Fixed Amount
+define.fulfullment=Fulfillment
 define.general=General
 define.global=Global
 define.here=Here
 define.inheritance=Inheritance
 define.inherited=Inherited
+define.initial=Initial
 define.international=International
 define.length=Length
 define.local=Local
 define.manual=Manual
+define.merchandise=Merchandise
 define.modifiedByAccount=Modified By
 define.modifiedDateTime=Modified on
 define.na=N/A
@@ -335,18 +340,21 @@ define.notapplicable=N/A
 define.notconfirmed=The value that was entered does not match the 'confirm' value.
 define.ok=Ok
 define.option=Option
+define.order=Order
 define.percentageOff=Percentage Off
 define.print=Print
 define.process=Process
 define.quantityshipped=Qty. Shipped
 define.range=Range
 define.rate=Rate
+define.renewal=Renewal
 define.save=Save
 define.search=Search
 define.select=Select
 define.selectall=Select All
 define.show=Show
 define.sort=Sort
+define.subscription=Subscription
 define.system=System
 define.true=True
 define.unlimited=Unlimited
@@ -387,8 +395,17 @@ entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.ProductImage.imageFile=Image
+entity.PromotionReward.applicableTerm=Applicable Subscription Term
 entity.PromotionReward.brands=Brands
+entity.PromotionReward.excludedBrands=Brand Exclusions
+entity.PromotionReward.excludedOptions=Option Exclusions
 entity.PromotionReward.itemDiscountType=Discount Type
+entity.PromotionReward.maximumUsePerItem=Maximum Use Per Item
+entity.PromotionReward.maximumUsePerItem_hint=This defines the maximum nuber of times that this reward can be applied to an item in the cart with multiple quantities.
+entity.PromotionReward.maximumUsePerOrder=Maximum Use Per Order
+entity.PromotionReward.maximumUsePerOrder_hint=This defines the maximum number of times that this reward can be applied to an order.
+entity.PromotionReward.maximumUsePerQualification=Maximum Use Per Qualification
+entity.PromotionReward.maximumUsePerQualification_hint=This setting is mostly used in defining things like buy one get one free where you would qualify by having a quantity of 2 of an item, and then this would be set to 1 with 100% discount.  If there are no qualifiers than this setting is never used.
 entity.PromotionReward.options=Options
 entity.PromotionReward.roundingRule=Rounding Rule
 entity.PromotionReward.shippingAmount=Shipping Rate Fixed Amount
@@ -938,7 +955,7 @@ entity.promotionReward.delete_success=Promotion Reward Deleted
 entity.promotionReward.delete_validateisassigned=This promotion code cannot be deleted because it is in use.
 entity.promotionReward.excludedProductTypes=Product Type Exclusions
 entity.promotionReward.excludedProducts=Product Exclusions
-entity.promotionReward.excludedSkus=SKU Exclusions
+entity.promotionReward.excludedSkus=Sku Exclusions
 entity.promotionReward.itemRewardQuantity=Qty. per Qualification
 entity.promotionReward.maximumOrderRewardQuantity=Max. Qty. per Order
 entity.promotionReward.productTypes=Product Types
