Updated JQuery UI to fix a bug, and added some more promotion fixes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -399,6 +399,7 @@ entity.PromotionReward.applicableTerm=Applicable Subscription Term
 entity.PromotionReward.brands=Brands
 entity.PromotionReward.excludedBrands=Brand Exclusions
 entity.PromotionReward.excludedOptions=Option Exclusions
+entity.PromotionReward.fulfillmentMethods=Fulfillment Methods
 entity.PromotionReward.itemDiscountType=Discount Type
 entity.PromotionReward.maximumUsePerItem=Maximum Use Per Item
 entity.PromotionReward.maximumUsePerItem_hint=This defines the maximum nuber of times that this reward can be applied to an item in the cart with multiple quantities.
@@ -408,6 +409,7 @@ entity.PromotionReward.maximumUsePerQualification=Maximum Use Per Qualification
 entity.PromotionReward.maximumUsePerQualification_hint=This setting is mostly used in defining things like buy one get one free where you would qualify by having a quantity of 2 of an item, and then this would be set to 1 with 100% discount.  If there are no qualifiers than this setting is never used.
 entity.PromotionReward.options=Options
 entity.PromotionReward.roundingRule=Rounding Rule
+entity.PromotionReward.shippingAddressZones=Shipping Address Zones
 entity.PromotionReward.shippingAmount=Shipping Rate Fixed Amount
 entity.PromotionReward.shippingAmountOff=Shipping Rate Amount Off
 entity.PromotionReward.shippingDiscountType=Shipping Discount Type
