Javascript fixes for datetimepicker, ect.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -318,6 +318,7 @@ define.exportlist=Export List
 define.false=False
 define.filter=Filter
 define.fixedAmount=Fixed Amount
+define.fulfillment=Fulfillment
 define.fulfullment=Fulfillment
 define.general=General
 define.global=Global
