More subscription changes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1122,6 +1122,7 @@ entity.subscriptionBenefit.promotions=Promotions
 entity.subscriptionBenefit.subscriptionBenefitName=Subscription Benefit Name
 entity.subscriptionTerm.allowProrateFlag=Allow Prorate
 entity.subscriptionTerm.autoRenewFlag=Auto Renew
+entity.subscriptionTerm.autoPayFlag=Auto Pay
 entity.subscriptionTerm.autoRetryPaymentDays=Auto Retry After Days
 entity.subscriptionTerm.billedOnDayOfMonth=Bill On Day of Month
 entity.subscriptionTerm.gracePeriodTerm=Grace Period Term
@@ -1133,7 +1134,9 @@ entity.subscriptionUsage=Subscription Usage
 entity.subscriptionUsage.accountPaymentMethod=Account Payment Method
 entity.subscriptionUsage.allowProrateFlag=Allow Prorate
 entity.subscriptionUsage.autoRenewFlag=Auto Renew
+entity.subscriptionUsage.autoPayFlag=Auto Pay
 entity.subscriptionUsage.currentStatusType=Current Status
+entity.subscriptionUsage.expirationDate=Expiration Date
 entity.subscriptionUsage.nextBillDate=Next Bill Date
 entity.subscriptionUsage.renewalPrice=Renewal Price
 entity.subscriptionUsage.subscriptionOrderItemName=Subscription Item
