adding more labels

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1598,3 +1598,7 @@ admin.product.processoptiongroup_nav=Add Option Group
 admin.product.processoption_nav=Add Option
 admin.product.processproduct.processOption.optionGroup=Option Group
 admin.product.processproduct.processOption.option=Option
+entity.VendorOrderItem_plural=Order Items
+entity.StockReceiverVendorOrder_plural=Stock Receivers
+admin.warehouse.stockadjustments.products=Products
+entity.VendorOrderItem=Order Item
