--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1602,3 +1602,12 @@ entity.VendorOrderItem_plural=Order Items
 entity.StockReceiverVendorOrder_plural=Stock Receivers
 admin.warehouse.stockadjustments.products=Products
 entity.VendorOrderItem=Order Item
+entity.product.subscriptiontermsrequired=Subscription Terms are Required
+entity.product.subscriptionbenifitsrequired=Subscription Benefits are Required
+entity.SubscriptionTerm.autoPayFlag=Auto Pay
+admin.vendor.processvendororder.processOption.quantity=Quantity
+admin.vendor.processvendororder.processOption.cost=Cost
+admin.vendor.processVendorOrder_nav=Process Vendor Orders
+entity.StockAdjustmentItem_plural=Stock Adjustment Items
+admin.warehouse.processStockAdjustment_nav=Add Stock Adjustment Items
+admin.warehouse.processstockadjustment.processOption.quantity=Quantity
