--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1614,3 +1614,5 @@ admin.vendor.processVendorOrder_nav=Process Vendor Orders
 entity.StockAdjustmentItem_plural=Stock Adjustment Items
 admin.warehouse.processStockAdjustment_nav=Add Stock Adjustment Items
 admin.warehouse.processstockadjustment.processOption.quantity=Quantity
+entity.stockadjustmentitem=Stock Adjustment Items
+admin.warehouse.processStockAdjustment_actions=Process Stock Adjustment
