--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1608,3 +1608,6 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
+define.cart=Order
+admin.vendor.addItems=Add Order Items
+admin.vendor.stockreceivers.missingProducts=You must enter order items before processing
