Updates to the modal window and a few other JS/CSS things

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -404,6 +404,7 @@ entity.Order.totalamounttoberefunded=Total Amount To Be Refunded
 entity.OrderDelivery.trackingNumber=Tracking Number
 entity.OrderDelivery_plural=Order Deliveries
 entity.OrderFulfillment.chargeAfterDiscount=Total Charge
+entity.OrderFulfillment.orderFulfillmentID=Order Fulfillment ID
 entity.OrderPayment.amountReceived=Amount Received
 entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
