fixing the title of status column in order list.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -206,9 +206,11 @@ admin.setting.updateslatwall_nav=Update Slatwall
 admin.setting.updateslatwall_success=Slatwall updated successfully
 admin.setting_nav=Settings
 admin.vendor=Vendor Manager
+admin.vendor.addItems=Add Order Items
 admin.vendor.processVendorOrder_nav=Process Vendor Orders
 admin.vendor.processvendororder.processOption.cost=Cost
 admin.vendor.processvendororder.processOption.quantity=Quantity
+admin.vendor.stockreceivers.missingProducts=You must enter order items before processing
 admin.vendor.vendorordertabs.items=Order Items
 admin.vendor.vendorordertabs.products=Products
 admin.vendor.vendorordertabs.stockreceivers=Stock Receivers
@@ -315,7 +317,7 @@ define.autoIncrement=Auto Increment
 define.backtolist=Back To List
 define.both=Both
 define.cancel=Cancel
-define.cart=Cart
+define.cart=Order
 define.comments=Comments
 define.confirm=Confirm
 define.contentAccess=Content Access
@@ -367,6 +369,7 @@ define.select=Select
 define.selectall=Select All
 define.show=Show
 define.sort=Sort
+define.status=Status
 define.subscription=Subscription
 define.system=System
 define.true=True
@@ -1609,6 +1612,3 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
-define.cart=Order
-admin.vendor.addItems=Add Order Items
-admin.vendor.stockreceivers.missingProducts=You must enter order items before processing
