Sku Image Upload update

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1616,3 +1616,4 @@ validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
 entity.Sku.userDefinedPriceFlag=User Defined Price
+entity.Sku.exclusive=Image is exclusive for this sku
