--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -454,7 +454,9 @@ entity.ShippingMethodRate.shipmentWeightRange=Fulfillment Weight Range
 entity.ShippingMethodRate.shippingIntegration=Shipping Integration
 entity.ShippingMethodRate.shippingintegrationmethod=Service Provider Method
 entity.ShippingMethod_plural=Shipping Methods
+entity.Sku.exclusive=Image is exclusive for this sku
 entity.Sku.priceGroupRates=Price Group Rates
+entity.Sku.userDefinedPriceFlag=User Defined Price
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.StockAdjustmentItem_plural=Stock Adjustment Items
 entity.StockReceiverVendorOrder_plural=Stock Receivers
@@ -1487,6 +1489,18 @@ permission.warehouse.savestockreceiver=Stock Receiver - Save
 print.packingSlip=Packing Slip
 print.packingslip=Packing Slip
 setting.brandDisplayTemplate=Brand Display Template
+setting.brandHTMLTitleString=Brand HTML Title String
+setting.brandMetaDescriptionString=Brand Meta Description String
+setting.brandMetaKeywordsString=Brand Meta Keywords String
+setting.productHTMLTitleString=Product HTML Title String
+setting.productMetaDescriptionString=Product Meta Description String
+setting.productMetaKeywordsString=Product Meta Keywords String
+setting.productTypeHTMLTitleString=Product Type HTML Title String
+setting.productTypeMetaDescriptionString=Product Type Meta Description String
+setting.productTypeMetaKeywordsString=Product Type Meta Keywords String
+setting.contentHTMLTitleString=Content HTML Title String
+setting.contentMetaDescriptionString=Content Meta Description String
+setting.contentMetaKeywordsString=Content Meta Keywords String
 setting.contentDefaultProductsPerPage=Products per page
 setting.contentDefaultProductsPerPage_hint=Default number of products per page
 setting.contentIncludeChildContentProductsFlag=Show product in sub pages
@@ -1615,5 +1629,3 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
-entity.Sku.userDefinedPriceFlag=User Defined Price
-entity.Sku.exclusive=Image is exclusive for this sku
