Few subscription fixes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,9 @@
 
 admin.account=Account Manager
+admin.account.processsubscriptionusage.processContext=Action
+admin.account.processsubscriptionusage.processOption.renewSubscription=Renew Subscription
+admin.account.processsubscriptionusage.processOption.cancelSubscription=Cancel Subscription
+admin.account.processsubscriptionusage.processOption.updateSubscription=Update Subscription Status
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
 admin.account.accounttabs.customattributes=Custom Attributes
@@ -10,8 +14,6 @@ admin.account.accounttabs.permissions=Permission Groups
 admin.account.accounttabs.pricegroups=Price Groups
 admin.account.accounttabs.productreviews=Product Reviews
 admin.account.accounttabs.subscriptionusage=Subscriptions
-admin.account.subscriptionUsage.renewal_error=There was an error when trying to renew the subscription 
-admin.account.subscriptionUsage.renewal_success=Subscription was renewed successfully 
 admin.account_nav=Accounts
 admin.define.create=Create ${itemEntityName}
 admin.define.create_nav=Add ${itemEntityName}
