Allows for a tax category to be setup as a sku setting, and configured at any level.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,9 +1,5 @@
 
 admin.account=Account Manager
-admin.account.processsubscriptionusage.processContext=Action
-admin.account.processsubscriptionusage.processOption.renewSubscription=Renew Subscription
-admin.account.processsubscriptionusage.processOption.cancelSubscription=Cancel Subscription
-admin.account.processsubscriptionusage.processOption.updateSubscription=Update Subscription Status
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
 admin.account.accounttabs.customattributes=Custom Attributes
@@ -14,6 +10,10 @@ admin.account.accounttabs.permissions=Permission Groups
 admin.account.accounttabs.pricegroups=Price Groups
 admin.account.accounttabs.productreviews=Product Reviews
 admin.account.accounttabs.subscriptionusage=Subscriptions
+admin.account.processsubscriptionusage.processContext=Action
+admin.account.processsubscriptionusage.processOption.cancelSubscription=Cancel Subscription
+admin.account.processsubscriptionusage.processOption.renewSubscription=Renew Subscription
+admin.account.processsubscriptionusage.processOption.updateSubscription=Update Subscription Status
 admin.account_nav=Accounts
 admin.define.create=Create ${itemEntityName}
 admin.define.create_nav=Add ${itemEntityName}
@@ -1591,6 +1591,7 @@ setting.skuQATSIncludesQNROVOFlag=QATS Includes QNROVO
 setting.skuShippingWeight=Shipping Weight
 setting.skuShippingWeightUnitCode=Shipping Weight Unit of Measurement
 setting.skuShippingWeight_hint=Shipping weight of a single Qty. of a SKU
+setting.skuTaxCategory=Tax Category
 setting.skuTrackInventoryFlag=Track Inventory
 setting.skuTrackInventoryFlag_hint=Select this if you would like the system to track inventory at this level.
 setting.value=Value
