Fixes some settings stuff, updates the help menu, and fixes search issues.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -169,6 +169,8 @@ admin.setting.createshippingmethodrate_nav=Manual Rate
 admin.setting.default=Setting Dashboard
 admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
 admin.setting.deletesetting_nav=Remove Setting Override
+admin.setting.detailslatwallupdate=Slatwall Update Utility
+admin.setting.detailslatwallupdate_nav=Update Slatwall
 admin.setting.fulfillmentmethodtabs.fulfillmentsettings=Fulfillment Method Settings
 admin.setting.fulfillmentmethodtabs.shippingmethods=Shipping Methods
 admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
