--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -397,6 +397,7 @@ entity.CreditCardTransaction.providerTransactionID=Provider Transaction ID
 entity.CreditCardTransaction.statusCode=Status Code
 entity.CreditCardTransaction.transactionType=Transaction Type
 entity.CreditCardTransaction_plural=Credit Card Transactions
+entity.Integration.fw1ActiveFlag=FW1 Subsystem Active
 entity.Option_plural=Options
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.fulfillmenttotal=Fulfillment Amount
