--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -104,6 +104,7 @@ admin.pricing.promotionreward.editdisabled=This promotion reward cannot be edite
 admin.pricing.promotiontabs.promotioncodes=Promotion Codes
 admin.pricing.promotiontabs.promotiondescription=Description
 admin.pricing.promotiontabs.promotionperiods=Promotion Periods
+admin.pricing.promotiontabs.promotionsummary=Summary
 admin.pricing_nav=Pricing
 admin.product=Product Manager
 admin.product.SelectPricegroupRate_nav=Select Price Group
