--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -513,6 +513,7 @@ entity.account.remoteCustomerID=Remote Customer ID
 entity.account.remoteEmployeeID=Remote Employee ID
 entity.account.type=Type
 entity.accountPaymentMethod=Account Payment Method
+entity.AccountPaymentMethod_plural=Account Payment Methods
 entity.accountPaymentMethod.accountPaymentMethodName=Payment Method Name
 entity.accountPaymentMethod.creditCardLastFour=Credit Card
 entity.accountPaymentMethod.creditCardNumber=Credit Card Number
@@ -926,6 +927,7 @@ entity.product.webQC=webQC
 entity.product.webQEXP=webQEXP
 entity.product.webQOH=webQOH
 entity.productImage=Product Image
+entity.ProductImage_plural=Product Images
 entity.productImage.imageDescription=Image Description
 entity.productImage.imageName=Image Name
 entity.productImage.imageType=Image Type
